--- a/public/clientchat/mainassets/css/style.css
+++ b/public/clientchat/mainassets/css/style.css
@@ -90,7 +90,7 @@ a, a:hover, a:focus {
 
 .btn-theme {
     color: #fff;
-    background-color: #f68b1f;
+    background-color: rgb(248,171, 14);
     border: 0;
 }
 
@@ -235,7 +235,7 @@ hr {
 }
 
 .bg-theme {
-    background-color: #f68b1f;
+    background-color: rgb(248,171, 14);
 }
 
 ul.top-menu>li>.logout {
@@ -835,7 +835,7 @@ ul.top-menu>li>a:hover, ul.top-menu>li>a:focus {
     content: ' ';
     width: 14px;
     height: 14px;
-    background: #f68b1f;
+    background: rgb(248,171, 14);
     border-radius: 50px;
     position: absolute;
     top: 8px;
@@ -916,7 +916,7 @@ ul.top-menu>li>a:hover, ul.top-menu>li>a:focus {
     line-height: 60px;
     height: 60px;
     margin: 0;
-    background: #f68b1f;
+    background: rgb(248,171, 14);
     text-align: center;
 }
 
@@ -1161,7 +1161,7 @@ PANELS CONFIGURATIONS
 
 .theme-panel .theme-header {
     text-align: center;
-    background: #f68b1f;
+    background: rgb(248,171, 14);
     padding: 3px;
     margin-bottom: 15px;
     color: #fff;
@@ -1231,7 +1231,7 @@ PANELS CONFIGURATIONS
 
 .green-panel {
     text-align: center;
-    background: #f68b1f;
+    background: rgb(248,171, 14);
 }
 
 .green-panel .green-header {
@@ -1283,7 +1283,7 @@ PANELS CONFIGURATIONS
 }
 
 .white-panel i {
-    color: #f68b1f;
+    color: rgb(248,171, 14);
     padding-right: 4px;
     font-size: 14px;
 }
@@ -1531,7 +1531,7 @@ PANELS CONFIGURATIONS
 }
 
 .calendar-month-header {
-    background: #f68b1f;
+    background: rgb(248,171, 14);
     color: white;
 }
 
@@ -2127,7 +2127,7 @@ label {
     margin: 0;
     padding: 25px 20px;
     text-align: center;
-    background: #f68b1f;
+    background: rgb(248,171, 14);
     border-radius: 5px 5px 0 0;
     -webkit-border-radius: 5px 5px 0 0;
     color: #fff;
